--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./capsule.png">
+  <link rel="icon" type="image/x-icon" href="./images/capsule.png">
   <link rel="stylesheet" href="./styles.css">
   <title>Lipinski Rule of 5</title>
 </head>
@@ -14,8 +14,8 @@
     <input type="file" id="fileInput" accept=".pdb">
     <div class="output">
       <p class="result">Length of extracted atom information: <span id="length"></span></p>
-      <p class="result">ATOM Molecular Weight: <span id="atomWeight"></span></p>
-      <p class="result">HETATM Molecular Weight: <span id="hetatmWeight"></span></p>
+      <p class="result">Protein(ATOM) Molecular Weight: <span id="atomWeight"></span></p>
+      <p class="result">Ligand(HETATM) Molecular Weight: <span id="hetatmWeight"></span></p>
       <p class="result">Hydrogen Bond Acceptors: <span id="hbAcceptors"></span></p>
       <p class="result">Hydrogen Bond Donors: <span id="hbDonors"></span></p>
       <div class="ph-range">
