--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <div class="container1">
       <div class="info" >
         <p><strong>Info!</strong>The website only supports .pdb format only</p>
-        <p>Lipinski rule of 5 helps in distinguishing between drug like and non drug like molecules.</p>
-        <p>It predicts high probability of success or failure due to drug likeness for molecules complying with 2 or more of the following rules</p>
+        <p>Lipinski rule of 5 helps in distinguishing between drug like and non drug like molecules.
+        It predicts high probability of success or failure due to drug likeness for molecules complying with 2 or more of the following rules</p>
     </div>
     <div class="list">
         <ul class="myUL">
