--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Lipinski Rule of 5</h1>
     <input type="file" id="fileInput" accept=".pdb">
     <div class="output">
-      <p class="result" style="font-weight: 200">Length of extracted atom information: <span id="length"></span></p>
+      <p class="result" style="font-weight: 200;">Length of extracted atom information: <span id="length"></span></p>
       <p class="result">Protein(ATOM) Molecular Weight: <span id="atomWeight"></span></p>
       <p class="result">Ligand(HETATM) Molecular Weight: <span id="hetatmWeight"></span></p>
       <p class="result">Hydrogen Bond Acceptors: <span id="hbAcceptors"></span></p>
