Update on the script and index files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <input type="number" id="phRange" step="0.1" min="0" max="14">
         <button id="calculateButton">Calculate</button>
       </div>
-      <p class="result">Log P: <span id="logP"></span></p>
+      <p class="result">Log P: <span id="logP"></span></p>   
+      <p class="result">Lipinski's Rule of Five Violations: <span id="violations"></span></p>
     </div>
     <pre id="output"></pre>
   </div>
