--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="info" >
         <p><strong>Info!</strong>The website only supports .pdb format only</p>
         <p>Please Convert the any file format to <strong>.pdb</strong>using the below link:</p>
-        <a href="http://www.cheminfo.org/Chemistry/Cheminformatics/FormatConverter/index.html" target="_top">Click Here To Convert</a>
+        <a href="http://www.cheminfo.org/Chemistry/Cheminformatics/FormatConverter/index.html" target="_blank">Click Here To Convert</a>
         <p>Lipinski rule of 5 helps in distinguishing between drug like and non drug like molecules.
         It predicts high probability of success or failure due to drug likeness for molecules complying with 2 or more of the following rules</p>
     </div>
